dinoinsel als info hizugefügt

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "testServer": "290298971811741696",
+    "dinoinselServer": "528558067910967307",
     "clientId": "1250516854036893856",
     "devs": ["210421780496515074"]
 }
